# escaping-the-depths

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
assets/: README.md
docs/wireframes/: CampsiteMockup.drawio  ScoreUI-Sizing.drawio
src/: lib.rs
src/core_logic/: interacting.rs  mod.rs  progressing.rs  scoring.rs  setting.rs  traveling.rs
src/game_logic/: mod.rs  pathfinding.rs  room_generating.rs  scores.rs  traps.rs  viewer_interaction.rs
src/stream_logic/: animation.rs  background_music.rs  mod.rs  networking.rs  sfx.rs  ui.rs
tests/: audio.rs  mock_game.rs  mvp.rs  qol.rs  surviving-the-trip-mvp.rs
tests/assets/maps/: campsite_1.tmx
tests/assets/objectives/: campsite_1_objectives.json
tests/features/: audio.feature  mvp.feature  qol.feature  surviving-the-trip-mvp.feature
