[package]
name = "surviving-the-trip"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "^0.17", features = ["wayland", "wav", "mp3"] }
tiled = "^0.14"
rand = "^0.9"

tokio-tungstenite = { version = "^0.27", features = ["native-tls"] }
tokio = { version = "^1", features = ["full"] }
serde_json = "^1"

chrono = "^0.4"
futures-util = "0.3.31"

[dev-dependencies]
cucumber = "^0.21"
futures = "^0.3"

[[test]]
name = "audio"
harness = false

[[test]]
name = "surviving-the-trip-mvp"
harness = false
